Fix project: Add missing padding between button & image

--- a/themes/portfolio/assets/project.scss
+++ b/themes/portfolio/assets/project.scss
@@ -30,6 +30,7 @@
 .imageholder {
     width: 100%;
     max-width: 700px; 
+    padding-bottom: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
